# aig

./: BEHAVIOR_RULES.md  CMakeLists.txt  README.md  TESTME.md  gamedesign.md  graphics_requests.md  init.lua  sound_requests.md  summary.md
assets/sfx/: README.txt
data/: contracts.json  crop_codex.json  crops.json  items_basic.json  trades.json  tunables.json
docs/: design.md
docs/features/: damage.md  entities.md  farming.md  hostile_npcs.md  powersim.md  quests.md  rails.md  todo.md  transcendence.md  ui.md  watersim.md
src/: headless_main.cpp
src/components/: Animation.cpp  Animation.h
src/core/: Game.cpp  Game.h  State.h
src/entities/: Altar.cpp  Altar.h  AnimatedSprite.cpp  AnimatedSprite.h  Cart.cpp  Cart.h  Crop.cpp  Crop.h  Entity.h  ExampleSpriteEntity.cpp  ExampleSpriteEntity.h  HiddenLocation.cpp  HiddenLocation.h  HostileNPC.cpp  HostileNPC.h  ItemEntity.cpp  ItemEntity.h  NPC.cpp  NPC.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Rail.cpp  Rail.h
src/input/: InputManager.cpp  InputManager.h
src/items/: Item.cpp  Item.h
src/resources/: ResourceManager.cpp  ResourceManager.h
src/states/: HiddenRealmState.cpp  HiddenRealmState.h  PlayState.cpp  PlayState.h
src/systems/: Dialog.cpp  Dialog.h  Inventory.cpp  Inventory.h  Quest.cpp  Quest.h  SaveGame.cpp  SaveGame.h  SoundManager.cpp  SoundManager.h
src/tools/: RailTool.cpp  RailTool.h
src/ui/: InventoryUI.cpp  InventoryUI.h
src/world/: TileMap.cpp  TileMap.h
